fix horizontal scrolling issue on mobile

--- a/src/scss/Project.scss
+++ b/src/scss/Project.scss
@@ -96,6 +96,7 @@
       #project-left { display: none; }
       #project-right {
         width: 100%;
+        overflow-x: hidden;
         #project-content { padding: 36px 25px 0 25px; }
       }
     }
